--- a/src/App.css
+++ b/src/App.css
@@ -513,3 +513,41 @@ h6 {
   }
 }
 /* end of rooms fitler*/
+
+/* * social sites * */
+.social {
+  padding: 1rem 0;
+}
+.social {
+  background:white;
+  text-align: center;
+}
+.social-center {
+  width: 90vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+  grid-row-gap: 1rem;
+  grid-column-gap: 1px;
+}
+.social span {
+  display: inline-block;
+  color: var(--primaryColor);
+  margin-bottom: 1.5rem;
+}
+.social h6 {
+  letter-spacing: var(--mainSpacing);
+}
+@media screen and (min-width: 992px) {
+  .social-center {
+    width: 95vw;
+    max-width: 1170px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .social p {
+    width: 100%;
+  }
+}
+/*end of social */
